# zaprett-repo-utils

./: Cargo.toml  README.md
.github/workflows/: workflow.yml
src/: cli.rs  config.rs  enum.rs  lib.rs  main.rs  structure.rs
