[package]
name = "zaprett-repo-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
edit = "0.1.5"
getset = "0.1.6"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha256 = "1.6.0"
tabled = "0.20.0"
walkdir = "2.5.0"
dunce = "1.0.5"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1